2013-07-09  Tristan Gingold  <gingold@adacore.com>

	* configure.com: Add new defines to match changes in configure.

2013-05-28  Cary Coutant  <ccoutant@google.com>

	* dwarf.c (display_debug_lines_raw): Print section offsets.

2013-05-15  Cary Coutant  <ccoutant@google.com>

	* dwarf.c (SAFE_BYTE_GET64): Correct end-of-buffer check;
	don't increment PTR.
	(decode_location_expression): DW_OP_const2u should read 2 bytes.
	(display_debug_lines_decoded): Adjust formatting.
	* elfcomm.c (byte_get_little_endian): Add cases for 5-, 6-, and
	7-byte reads.
	(byte_get_big_endian): Likewise.
	(byte_get_signed): Likewise.

2013-05-09  Andrew Pinski  <apinski@cavium.com>

	* doc/binutils.texi: Document -Mvirt disassembler option.

2013-05-02  Nick Clifton  <nickc@redhat.com>

	* readelf.c: Add support for MSP430X architecture.

2013-05-02  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (display_debug_lines_raw): Do not treat .debug_line.dwo
	sections as if they were fragmentary .debug_line sections.
	(display_debug_lines_decoded): Likewise.

2013-04-29  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (read_debug_line_header): New function.  Reads in a
	header in a .debug_line section.
	(display_debug_lines_raw): Use new function.  Handle fragmentary
	.debug_line sections.
	(display_debug_lines_decoded): Likewise.
	* readelf.c (process_section_headers): Handle fragmenatry
	.debug_line sections.
	(display_debug_section): Likewise.

2013-04-26  Ian Lance Taylor  <iant@google.com>

	* MAINTAINERS: Add myself and Cary as gold maintainers.

2013-04-08  Tom Tromey  <tromey@redhat.com>

	* dwarf.c (process_debug_info): Check dwarf_cutoff_level.

2013-04-08  Tom Tromey  <tromey@redhat.com>

	* dwarf-mode.el: Bump version number.
	(dwarf-mode): Remove autoload.
	(dwarf-die-reference): Relax regexp.

2013-04-05  Alan Modra  <amodra@gmail.com>

	PR binutils/15324
	* configure.in: Add strnlen to AC_CHECK_DECLS, sort.
	* dwarf.c (strnlen): Provide fallback decl.
	* config.in: Regnerate.